Update the analyze_djinni.ipynb file.

--- a/analyzing/analyze_djinni.ipynb
+++ b/analyzing/analyze_djinni.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "77cde8d6-7ba1-4a92-80df-28bfe517aa7f",
    "metadata": {},
    "outputs": [],
@@ -13,67 +13,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "id": "76d1603d-c16a-4c6e-ab2e-3e7b6b63dc47",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 399 entries, 0 to 398\n",
-      "Data columns (total 7 columns):\n",
-      " #   Column            Non-Null Count  Dtype \n",
-      "---  ------            --------------  ----- \n",
-      " 0   country           399 non-null    object\n",
-      " 1   date_time         399 non-null    object\n",
-      " 2   employment_type   399 non-null    object\n",
-      " 3   num_applications  399 non-null    int64 \n",
-      " 4   num_views         399 non-null    int64 \n",
-      " 5   tools             399 non-null    object\n",
-      " 6   year_of_exp       399 non-null    int64 \n",
-      "dtypes: int64(3), object(4)\n",
-      "memory usage: 21.9+ KB\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Perfrom Extracting\n",
-    "df = pd.read_csv(\"../jobs.csv\")\n",
-    "df.info()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "id": "ffeeff6d-41f1-47db-9636-afd2c0959f05",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0     [Azure Cloud Platform, API, ChatGPT, Git, NLP,...\n",
-       "2     [Docker, React, Middle Front, Technology, Rabb...\n",
-       "3     [React, SSR, DRY, CSS, Jest, Python APIs, Full...\n",
-       "4          [Git, US Timezone, Python, English, CST/EST]\n",
-       "5     [DevOps, Firestore, Google AppEngine, API, Rea...\n",
-       "6                                     [IaC, Kubernetes]\n",
-       "7     [MongoDB, Docker, GitHub CI, Full-Stack, Elast...\n",
-       "8     [SQL, Data Analysis, Excel, Python, ETL, Power...\n",
-       "9     [Tracking Data, Python, Vue, English, State Ma...\n",
-       "10    [PostgreSQL, Data Management, SQL, Project, Re...\n",
-       "11    [SQL, AWS, Python, Software Design, English, G...\n",
-       "12    [PostgreSQL, Nginx, SQL, Docker, Git, HTML, CS...\n",
-       "13    [Clickhouse, Gitlab CI\\CD, Server, Dbt, Scient...\n",
-       "Name: tools, dtype: object"
+       "list"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
+   "source": [
+    "# Perfrom Extracting\n",
+    "# and convert column tools from string to list\n",
+    "df = pd.read_csv(\"../jobs.csv\", converters={'tools': literal_eval})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "ffeeff6d-41f1-47db-9636-afd2c0959f05",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# Perfrom Cleaning, Wrangling\n",
     "\n",
@@ -81,25 +47,23 @@
     "from ast import literal_eval\n",
     "\n",
     "# change year of exp to data type int8\n",
-    "df[\"year_of_exp\"] = df[\"year_of_exp\"].astype(np.int8)\n",
+    "df.loc[:, \"year_of_exp\"] = df[\"year_of_exp\"].astype(np.int8)\n",
     "\n",
     "# to datetime objects\n",
-    "df[\"date_time\"] = pd.to_datetime(df[\"date_time\"], format=\"%H:%M %d.%m.%Y\")\n",
+    "df.loc[:, \"date_time\"] = pd.to_datetime(df[\"date_time\"], format=\"%H:%M %d.%m.%Y\")\n",
     "\n",
     "# remove rows where there is no tools\n",
-    "df = df[df[\"tools\"] != \"[]\"]\n",
+    "df.loc[:, \"tools\"] = df[df.astype(str)[\"tools\"] != \"[]\"]\n",
     "\n",
-    "# convert string list tools column to list\n",
-    "df.tools = df.tools.replace(\"\\\\\", \"/\")\n",
-    "# df.tools = df.tools.apply(literal_eval)\n",
+    "tools = pd.DataFrame({\"tools\":df[\"tools\"].agg(\"sum\")})\n",
+    "tools.value_counts().to_csv(\"tools.csv\")\n",
     "\n",
-    "# df[\"tools\"].agg(sum)\n",
     "# df_exploded = df.explode(\"tools\")\n",
     "\n",
     "# Get unique tools from the exploded DataFrame\n",
     "# unique_tools = df_exploded[\"tools\"].unique()\n",
-    "\n",
-    "df.head(13).tools"
+    "# df.info()\n",
+    "# df_exploded"
    ]
   },
   {
