--- a/analyzing/analyze_djinni.ipynb
+++ b/analyzing/analyze_djinni.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "77cde8d6-7ba1-4a92-80df-28bfe517aa7f",
    "metadata": {},
    "outputs": [],
@@ -14,40 +14,138 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 28,
    "id": "76d1603d-c16a-4c6e-ab2e-3e7b6b63dc47",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>country</th>\n",
+       "      <th>date_time</th>\n",
+       "      <th>employment_type</th>\n",
+       "      <th>num_applications</th>\n",
+       "      <th>num_views</th>\n",
+       "      <th>tools</th>\n",
+       "      <th>year_of_exp</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>['Ukraine', 'Portugal', 'Spain', 'Argentina', ...</td>\n",
+       "      <td>18:30 06.05.2024</td>\n",
+       "      <td>['Remote']</td>\n",
+       "      <td>10</td>\n",
+       "      <td>37</td>\n",
+       "      <td>[Code, Native, IaC, Infrastructure, CD, Cloud]</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>['Ukraine']</td>\n",
+       "      <td>18:16 06.05.2024</td>\n",
+       "      <td>['Remote']</td>\n",
+       "      <td>24</td>\n",
+       "      <td>67</td>\n",
+       "      <td>[Pika, SQLAlchemy, Celery Beat, AWS, Docker, P...</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>['Ukraine', 'Cyprus']</td>\n",
+       "      <td>15:30 06.05.2024</td>\n",
+       "      <td>['Remote']</td>\n",
+       "      <td>2</td>\n",
+       "      <td>19</td>\n",
+       "      <td>[CAPTCHAs, Selenium, Redis, DDD, GCS, SSL, Pyt...</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>['Ukraine']</td>\n",
+       "      <td>15:08 06.05.2024</td>\n",
+       "      <td>['Office', 'Remote']</td>\n",
+       "      <td>25</td>\n",
+       "      <td>76</td>\n",
+       "      <td>[CD, Linux, Git, Docker]</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>['Israel']</td>\n",
+       "      <td>14:10 06.05.2024</td>\n",
+       "      <td>['Remote']</td>\n",
+       "      <td>22</td>\n",
+       "      <td>219</td>\n",
+       "      <td>[Async IO, Great, AWS, GCP, Auto, Azure, Quick...</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                             country         date_time  \\\n",
+       "0  ['Ukraine', 'Portugal', 'Spain', 'Argentina', ...  18:30 06.05.2024   \n",
+       "1                                        ['Ukraine']  18:16 06.05.2024   \n",
+       "2                              ['Ukraine', 'Cyprus']  15:30 06.05.2024   \n",
+       "3                                        ['Ukraine']  15:08 06.05.2024   \n",
+       "4                                         ['Israel']  14:10 06.05.2024   \n",
+       "\n",
+       "        employment_type  num_applications  num_views  \\\n",
+       "0            ['Remote']                10         37   \n",
+       "1            ['Remote']                24         67   \n",
+       "2            ['Remote']                 2         19   \n",
+       "3  ['Office', 'Remote']                25         76   \n",
+       "4            ['Remote']                22        219   \n",
+       "\n",
+       "                                               tools  year_of_exp  \n",
+       "0     [Code, Native, IaC, Infrastructure, CD, Cloud]            5  \n",
+       "1  [Pika, SQLAlchemy, Celery Beat, AWS, Docker, P...            3  \n",
+       "2  [CAPTCHAs, Selenium, Redis, DDD, GCS, SSL, Pyt...            5  \n",
+       "3                           [CD, Linux, Git, Docker]            3  \n",
+       "4  [Async IO, Great, AWS, GCP, Auto, Azure, Quick...            5  "
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Perfrom Extracting\n",
     "# and convert column tools from string to list\n",
-    "df = pd.read_csv(\"../jobs.csv\", converters={'tools': literal_eval})"
+    "df = pd.read_csv(\"../jobs.csv\", converters={'tools': literal_eval})\n",
+    "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 33,
    "id": "ffeeff6d-41f1-47db-9636-afd2c0959f05",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "Series.notnull() takes 1 positional argument but 2 were given",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[34], line 12\u001b[0m\n\u001b[0;32m      9\u001b[0m df\u001b[38;5;241m.\u001b[39mloc[:, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdate_time\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mto_datetime(df\u001b[38;5;241m.\u001b[39mdate_time, \u001b[38;5;28mformat\u001b[39m\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m%\u001b[39m\u001b[38;5;124mH:\u001b[39m\u001b[38;5;124m%\u001b[39m\u001b[38;5;124mM \u001b[39m\u001b[38;5;132;01m%d\u001b[39;00m\u001b[38;5;124m.\u001b[39m\u001b[38;5;124m%\u001b[39m\u001b[38;5;124mm.\u001b[39m\u001b[38;5;124m%\u001b[39m\u001b[38;5;124mY\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     11\u001b[0m \u001b[38;5;66;03m# remove rows where there is no tools and drop duplicates\u001b[39;00m\n\u001b[1;32m---> 12\u001b[0m \u001b[43mdf\u001b[49m\u001b[43m[\u001b[49m\u001b[43mdf\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtools\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mnotnull\u001b[49m\u001b[43m]\u001b[49m\n\u001b[0;32m     13\u001b[0m \u001b[38;5;66;03m# df[\"tools\"] = df.tools.drop() \u001b[39;00m\n\u001b[0;32m     14\u001b[0m df\u001b[38;5;241m.\u001b[39mto_csv(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtools2.csv\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-      "File \u001b[1;32m~\\Projects\\scraping_analyzing_djinni\\venv\\Lib\\site-packages\\pandas\\core\\frame.py:4065\u001b[0m, in \u001b[0;36mDataFrame.__getitem__\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m   4063\u001b[0m check_dict_or_set_indexers(key)\n\u001b[0;32m   4064\u001b[0m key \u001b[38;5;241m=\u001b[39m lib\u001b[38;5;241m.\u001b[39mitem_from_zerodim(key)\n\u001b[1;32m-> 4065\u001b[0m key \u001b[38;5;241m=\u001b[39m \u001b[43mcom\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mapply_if_callable\u001b[49m\u001b[43m(\u001b[49m\u001b[43mkey\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m   4067\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m is_hashable(key) \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m is_iterator(key):\n\u001b[0;32m   4068\u001b[0m     \u001b[38;5;66;03m# is_iterator to exclude generator e.g. test_getitem_listlike\u001b[39;00m\n\u001b[0;32m   4069\u001b[0m     \u001b[38;5;66;03m# shortcut if the key is in columns\u001b[39;00m\n\u001b[0;32m   4070\u001b[0m     is_mi \u001b[38;5;241m=\u001b[39m \u001b[38;5;28misinstance\u001b[39m(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcolumns, MultiIndex)\n",
-      "File \u001b[1;32m~\\Projects\\scraping_analyzing_djinni\\venv\\Lib\\site-packages\\pandas\\core\\common.py:384\u001b[0m, in \u001b[0;36mapply_if_callable\u001b[1;34m(maybe_callable, obj, **kwargs)\u001b[0m\n\u001b[0;32m    373\u001b[0m \u001b[38;5;250m\u001b[39m\u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[0;32m    374\u001b[0m \u001b[38;5;124;03mEvaluate possibly callable input using obj and kwargs if it is callable,\u001b[39;00m\n\u001b[0;32m    375\u001b[0m \u001b[38;5;124;03motherwise return as it is.\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    381\u001b[0m \u001b[38;5;124;03m**kwargs\u001b[39;00m\n\u001b[0;32m    382\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[0;32m    383\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mcallable\u001b[39m(maybe_callable):\n\u001b[1;32m--> 384\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mmaybe_callable\u001b[49m\u001b[43m(\u001b[49m\u001b[43mobj\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    386\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m maybe_callable\n",
-      "\u001b[1;31mTypeError\u001b[0m: Series.notnull() takes 1 positional argument but 2 were given"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Perfrom Cleaning, Wrangling\n",
-    "\n",
-    "# to safely evaluate a string containing a Python literal \n",
     "\n",
     "# change year of exp to data type int8\n",
     "df.loc[:, \"year_of_exp\"] = df.year_of_exp.astype(np.int8)\n",
@@ -55,13 +153,16 @@
     "# to datetime objects\n",
     "df.loc[:, \"date_time\"] = pd.to_datetime(df.date_time, format=\"%H:%M %d.%m.%Y\")\n",
     "\n",
-    "# remove rows where there is no tools and drop duplicates\n",
-    "df[df.tools.notnull]\n",
-    "# df[\"tools\"] = df.tools.drop() \n",
-    "df.to_csv(\"tools2.csv\")\n",
-    "df.info()\n",
-    "# tools = pd.DataFrame({\"tools\":df[\"tools\"].agg(\"sum\")})\n",
-    "# tools.value_counts().to_csv(\"tools.csv\")\n",
+    "# remove rows where there is no tools\n",
+    "df = df[df.tools.astype(bool)]\n",
+    "\n",
+    "tools = pd.DataFrame({\"tools\":df.tools.agg(\"sum\")})\n",
+    "\n",
+    "# remove duplicates such as \"REST\" and \"RESTful\"\n",
+    "# is same and we should give counts of occurrences to \"REST\"\n",
+    "\n",
+    "\n",
+    "tools.value_counts().to_csv(\"tools1.csv\")\n",
     "\n",
     "# df_exploded = df.explode(\"tools\")\n",
     "\n",
