Install matplotlib and filter tools (removing duplicates) and count number of occurrence of each tool. Similar tools count will be added to original one.

--- a/analyzing/analyze_djinni.ipynb
+++ b/analyzing/analyze_djinni.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 2,
    "id": "76d1603d-c16a-4c6e-ab2e-3e7b6b63dc47",
    "metadata": {},
    "outputs": [
@@ -126,7 +126,7 @@
        "4  [Async IO, Great, AWS, GCP, Auto, Azure, Quick...            5  "
       ]
      },
-     "execution_count": 28,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 4,
    "id": "ffeeff6d-41f1-47db-9636-afd2c0959f05",
    "metadata": {},
    "outputs": [],
@@ -154,32 +154,138 @@
     "df.loc[:, \"date_time\"] = pd.to_datetime(df.date_time, format=\"%H:%M %d.%m.%Y\")\n",
     "\n",
     "# remove rows where there is no tools\n",
-    "df = df[df.tools.astype(bool)]\n",
-    "\n",
-    "tools = pd.DataFrame({\"tools\":df.tools.agg(\"sum\")})\n",
-    "\n",
-    "# remove duplicates such as \"REST\" and \"RESTful\"\n",
-    "# is same and we should give counts of occurrences to \"REST\"\n",
-    "\n",
-    "\n",
-    "tools.value_counts().to_csv(\"tools1.csv\")\n",
-    "\n",
-    "# df_exploded = df.explode(\"tools\")\n",
-    "\n",
-    "# Get unique tools from the exploded DataFrame\n",
-    "# unique_tools = df_exploded[\"tools\"].unique()\n",
-    "# df.info()\n",
-    "# df_exploded"
+    "df = df[df.tools.astype(bool)]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "284c540d-8532-499c-a7df-fac6a6bab828",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>tools</th>\n",
+       "      <th>count</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>304</th>\n",
+       "      <td>Python</td>\n",
+       "      <td>287</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>372</th>\n",
+       "      <td>English</td>\n",
+       "      <td>102</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>68</th>\n",
+       "      <td>Sql</td>\n",
+       "      <td>93</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>122</th>\n",
+       "      <td>AWS</td>\n",
+       "      <td>85</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>361</th>\n",
+       "      <td>Docker</td>\n",
+       "      <td>76</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       tools  count\n",
+       "304   Python    287\n",
+       "372  English    102\n",
+       "68       Sql     93\n",
+       "122      AWS     85\n",
+       "361   Docker     76"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "s"
+    "from fuzzywuzzy import fuzz\n",
+    "from fuzzywuzzy import process\n",
+    "\n",
+    "# Concatenate all tools into one Series\n",
+    "all_tools = pd.Series(df['tools'].sum())\n",
+    "\n",
+    "# Count the occurrences of each tool\n",
+    "tool_counts = all_tools.value_counts()\n",
+    "\n",
+    "# Define a function to remove duplicates and update counts\n",
+    "def removing_duplicates(tool_counts):\n",
+    "    \"\"\"\n",
+    "    Removing duplicates, exp 'AI', 'AI services' - is same,\n",
+    "    'AI' should stay, and 'AI services' count value should be\n",
+    "    added to 'AI' count\n",
+    "    \"\"\"\n",
+    "    unq_words = {}\n",
+    "    duplicates = set()\n",
+    "\n",
+    "    # Sort tool_counts by length of keys (tool names)\n",
+    "    tool_counts_sorted = tool_counts.sort_index(key=lambda v: v.str.len())\n",
+    "\n",
+    "    for tool, count in tool_counts_sorted.items():\n",
+    "        if tool not in duplicates:\n",
+    "            matches = process.extractBests(\n",
+    "                tool, \n",
+    "                tool_counts_sorted.index, \n",
+    "                scorer=lambda str1, str2: fuzz.ratio(str1.lower(), str2.lower()),\n",
+    "                score_cutoff=70\n",
+    "            )\n",
+    "            \n",
+    "            # Filter out matches that are similar to the current tool\n",
+    "            filtered_matches = {match for match, score in matches if match != tool and (\n",
+    "                match.lower().startswith(tool.lower()) or score >= 85\n",
+    "            )}\n",
+    "            \n",
+    "            # Add count of similar tools to the current tool\n",
+    "            unq_words[tool] = count + sum(tool_counts[match] for match in filtered_matches)\n",
+    "            duplicates |= filtered_matches\n",
+    "\n",
+    "    return unq_words\n",
+    "\n",
+    "# Remove duplicates and update counts\n",
+    "tools_dict = removing_duplicates(tool_counts)\n",
+    "\n",
+    "# Create DataFrame from dictionary\n",
+    "tools_df = pd.DataFrame({'tools': list(tools_dict.keys()), 'count': list(tools_dict.values())})\n",
+    "\n",
+    "# Sort DataFrame by count in descending order\n",
+    "tools_df = tools_df.sort_values(by='count', ascending=False)\n",
+    "tools_df.to_csv(\"tools.csv\", index=False)\n",
+    "\n",
+    "tools_df.head()"
    ]
   },
   {
