Plan is to wrap cells in function and integrate to web_server. But for now I managed to concatenate all data files in one DataFrame

--- a/analyzing/analyze_djinni.ipynb
+++ b/analyzing/analyze_djinni.ipynb
@@ -2,30 +2,38 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 9,
    "id": "77cde8d6-7ba1-4a92-80df-28bfe517aa7f",
    "metadata": {},
    "outputs": [],
    "source": [
     "import uuid\n",
     "import os\n",
+    "import dotenv\n",
     "import sys\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "from ast import literal_eval\n",
     "\n",
+    "dotenv.load_dotenv()\n",
+    "\n",
     "# add parent directory to sys path so we could access project modules\n",
     "parent_dir = os.path.abspath(os.path.join(os.getcwd(), os.pardir))\n",
     "sys.path.append(parent_dir)\n",
     "\n",
+    "from common.db.connnect_db import session\n",
+    "\n",
     "# get directory for saving results of plotting graphs\n",
-    "diagrams = os.path.join(\"..\", \"diagrams\")"
+    "diagrams = os.path.join(\"..\", \"diagrams\")\n",
+    "\n",
+    "# get directory path for saving results of scraping\n",
+    "scraped_data = os.path.join(\"..\", os.getenv(\"SCRAPING_RESULT_DIR\"))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 4,
    "id": "76d1603d-c16a-4c6e-ab2e-3e7b6b63dc47",
    "metadata": {},
    "outputs": [
@@ -143,7 +151,7 @@
        "4  [Python, K8s, Docker, Ansible, Teamcity]       False  "
       ]
      },
-     "execution_count": 154,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -151,14 +159,24 @@
    "source": [
     "# Perfrom Extracting and some Transforming\n",
     "# and convert columns from string list to list\n",
-    "df = pd.read_csv(\"../jobs.csv\", converters={\n",
-    "    \"contracts\": literal_eval,\n",
-    "    \"employment_type\": literal_eval,\n",
-    "    \"level_of_exp\": literal_eval,\n",
-    "    \"optional_skills\": lambda v: literal_eval(v) if v else np.nan,\n",
-    "    \"os\": lambda v: literal_eval(v) if v else np.nan,\n",
-    "    \"required_skills\": literal_eval,\n",
-    "})\n",
+    "def read_data_file(file_name:  str) -> pd.DataFrame:\n",
+    "    df = pd.read_feather(os.path.join(scraped_data, file_name), converters={\n",
+    "        \"contracts\": literal_eval,\n",
+    "        \"employment_type\": literal_eval,\n",
+    "        \"level_of_exp\": literal_eval,\n",
+    "        \"optional_skills\": lambda v: literal_eval(v) if v else np.nan,\n",
+    "        \"os\": lambda v: literal_eval(v) if v else np.nan,\n",
+    "        \"required_skills\": literal_eval,\n",
+    "    })\n",
+    "\n",
+    "def concatenated_df(file_names: list[str]) -> pd.DataFrame:\n",
+    "    dfs = [\n",
+    "        read_data_file(file_name) \n",
+    "        for file_name in file_names\n",
+    "        if os.path.isfile(os.path.join(scraped_data, file_name))\n",
+    "    ]\n",
+    "    df = pd.concat(dfs, ignore_index=True)\n",
+    "    \n",
     "\n",
     "df.head()"
    ]
